@@ -770,7 +770,7 @@ public class OrderService {
 
         String startDate = normalizeBlank(request.getStartDate());
         String endDate = normalizeBlank(request.getEndDate());
-        int pageSize = Math.min(Math.max(request.getSize(), 1), 50);
+        int pageSize = Math.clamp(request.getSize(), 1, 50);
 
         return paginationService.getPageInfo(
             request.getPage(),
@@ -788,6 +788,17 @@ public class OrderService {
                 }
             }
         );
+    }
+
+    public List<MyOrderItemResponse> getMyOrderItemsByOrderNo(String memberUid, int orderNo) {
+        if (memberUid == null || memberUid.isBlank()) {
+            throw new IllegalStateException("로그인이 필요합니다.");
+        }
+        List<MyOrderItemResponse> items = orderItemDAO.selectMyOrderItemsByOrderNo(memberUid, orderNo);
+        if (items.isEmpty()) {
+            throw new NoSuchElementException("주문을 찾을 수 없습니다.");
+        }
+        return items;
     }
 
     @Transactional
@@ -1014,7 +1025,7 @@ public class OrderService {
         String status;
         if (hasClaimInProgress) {
             status = "CLAIM_PARTIAL";
-        } else if (statuses.stream().allMatch(s -> List.of("DELIVERED", "CONFIRMED").contains(s))) {
+        } else if (List.of("DELIVERED", "CONFIRMED").containsAll(statuses)) {
             status = statuses.contains("DELIVERED") ? "DELIVERED" : "CONFIRMED";
         } else if (statuses.size() == 1) {
             status = switch (statuses.iterator().next()) {
